# crew-ai-rag

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/rag_crew/: console.py  crew.py  main.py  vector_store.py
src/rag_crew/config/: agents.yaml  tasks.yaml
src/rag_crew/tools/: vector_search_tool.py
