[project]
name = "rag_crew"
version = "0.1.0"
description = "rag_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5",
    "langchain-community>=0.4.0",
    "langchain-chroma>=0.2.0",
    "chromadb~=1.1.0",
    "langchain-openai>=1.2.0",
    "langchain-text-splitters>=1.1.0",
    "pypdf>=5.0.0",
]

[tool.uv]
prerelease = "allow"

[project.scripts]
rag_crew = "rag_crew.main:run"
run_crew = "rag_crew.main:run"
rag_console = "rag_crew.console:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
